--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ https://www.tooplate.com/view/2126-antique-cafe
         data-image-src="wwwroot/images/antique-cafe-bg-01.jpg">
         <nav id="tm-nav" class="fixed w-full">
             <div class="tm-container mx-auto px-2 md:py-6 text-right">
-                <button class="md:hidden py-2 px-2" id="menu-toggle"><i
+                <button type="button" class="md:hidden py-2 px-2" id="menu-toggle"><i
                         class="fas fa-2x fa-bars tm-text-gold"></i></button>
                 <ul class="mb-3 md:mb-0 text-2xl font-normal flex justify-end flex-col md:flex-row">
                     <li class="inline-block mb-4 mx-4"><a href="#intro" class="tm-text-gold py-1 md:py-3 px-4">Intro</a>
@@ -226,9 +226,9 @@ https://www.tooplate.com/view/2126-antique-cafe
         </div>
     </div>
 
-    <script src="js/jquery-3.6.0.min.js"></script>
-    <script src="js/parallax.min.js"></script>
-    <script src="js/jquery.singlePageNav.min.js"></script>
+    <script src="wwwroot/js/jquery-3.6.0.min.js"></script>
+    <script src="wwwroot/js/parallax.min.js"></script>
+    <script src="wwwroot/js/jquery.singlePageNav.min.js"></script>
     <script>
 
         function checkAndShowHideMenu() {
