--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -11,10 +11,10 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600&family=Oswald:wght@600&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="wwwroot/css/all.min.css"> <!-- fontawesome -->
+    <link rel="stylesheet" href="css/all.min.css"> <!-- fontawesome -->
     <!-- <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet"> -->
-    <link rel="stylesheet" href="wwwroot/css/tailwind.css">
-    <link rel="stylesheet" href="wwwroot/css/tooplate-antique-cafe.css">
+    <link rel="stylesheet" href="css/tailwind.css">
+    <link rel="stylesheet" href="css/tooplate-antique-cafe.css">
 
     <!--
 
@@ -27,8 +27,7 @@ https://www.tooplate.com/view/2126-antique-cafe
 
 <body>
     <!-- Intro -->
-    <div id="intro" class="parallax-window" data-parallax="scroll"
-        data-image-src="wwwroot/images/antique-cafe-bg-01.jpg">
+    <div id="intro" class="parallax-window" data-parallax="scroll" data-image-src="images/antique-cafe-bg-01.jpg">
         <nav id="tm-nav" class="fixed w-full">
             <div class="tm-container mx-auto px-2 md:py-6 text-right">
                 <button type="button" class="md:hidden py-2 px-2" id="menu-toggle"><i
@@ -72,8 +71,7 @@ https://www.tooplate.com/view/2126-antique-cafe
         </div>
     </div>
     <!-- Cafe Menu -->
-    <div id="menu" class="parallax-window" data-parallax="scroll"
-        data-image-src="wwwroot/images/antique-cafe-bg-02.jpg">
+    <div id="menu" class="parallax-window" data-parallax="scroll" data-image-src="images/antique-cafe-bg-02.jpg">
         <div class="container mx-auto tm-container py-24 sm:py-48">
             <div class="text-center mb-16">
                 <h2 class="bg-white tm-text-brown py-6 px-12 text-4xl font-medium inline-block rounded-md">Our Cafe Menu
@@ -82,7 +80,7 @@ https://www.tooplate.com/view/2126-antique-cafe
             <div class="flex flex-col lg:flex-row justify-around items-center">
                 <div class="flex-1 m-5 rounded-xl px-4 py-6 sm:px-8 sm:py-10 tm-bg-brown tm-item-container">
                     <div class="flex items-start mb-6 tm-menu-item">
-                        <img src="wwwroot/images/menu-item-1.jpg" alt="Image" class="rounded-md">
+                        <img src="images/menu-item-1.jpg" alt="Image" class="rounded-md">
                         <div class="ml-3 sm:ml-6">
                             <h3 class="text-lg sm:text-xl mb-2 sm:mb-3 tm-text-yellow">Hot Cappuccino</h3>
                             <div class="text-white text-md sm:text-lg font-light mb-1">S $8.50</div>
@@ -90,7 +88,7 @@ https://www.tooplate.com/view/2126-antique-cafe
                         </div>
                     </div>
                     <div class="flex items-start mb-6 tm-menu-item">
-                        <img src="wwwroot/images/menu-item-2.jpg" alt="Image" class="rounded-md">
+                        <img src="images/menu-item-2.jpg" alt="Image" class="rounded-md">
                         <div class="ml-3 sm:ml-6">
                             <h3 class="text-lg sm:text-xl mb-2 sm:mb-3 tm-text-yellow">Hot Americano</h3>
                             <div class="text-white text-md sm:text-lg font-light mb-1">S $9.50 . BG #544639</div>
@@ -98,7 +96,7 @@ https://www.tooplate.com/view/2126-antique-cafe
                         </div>
                     </div>
                     <div class="flex items-start mb-6 tm-menu-item">
-                        <img src="wwwroot/images/menu-item-3.jpg" alt="Image" class="rounded-md">
+                        <img src="images/menu-item-3.jpg" alt="Image" class="rounded-md">
                         <div class="ml-3 sm:ml-6">
                             <h3 class="text-lg sm:text-xl mb-2 sm:mb-3 tm-text-yellow">Hot Latte #FC6</h3>
                             <div class="text-white text-md sm:text-lg font-light mb-1">M $11.75</div>
@@ -106,7 +104,7 @@ https://www.tooplate.com/view/2126-antique-cafe
                         </div>
                     </div>
                     <div class="flex items-start mb-6 tm-menu-item">
-                        <img src="wwwroot/images/menu-item-4.jpg" alt="Image" class="rounded-md">
+                        <img src="images/menu-item-4.jpg" alt="Image" class="rounded-md">
                         <div class="ml-3 sm:ml-6">
                             <h3 class="text-lg sm:text-xl tm-text-yellow mb-1">Hot Espresso</h3>
                             <h3 class="text-lg sm:text-xl mb-2 sm:mb-3 tm-text-yellow">Hot Chocolate</h3>
@@ -121,7 +119,7 @@ https://www.tooplate.com/view/2126-antique-cafe
                             <div class="text-white text-md sm:text-lg font-light mb-1">Small $10</div>
                             <div class="text-white text-md sm:text-lg font-light">Large $15</div>
                         </div>
-                        <img src="wwwroot/images/menu-item-5.jpg" alt="Image" class="rounded-md">
+                        <img src="images/menu-item-5.jpg" alt="Image" class="rounded-md">
                     </div>
                     <div class="flex items-start justify-end mb-6 tm-menu-item-2">
                         <div class="text-right mr-6">
@@ -129,7 +127,7 @@ https://www.tooplate.com/view/2126-antique-cafe
                             <div class="text-white text-md sm:text-lg font-light mb-1">Small $12.50</div>
                             <div class="text-white text-md sm:text-lg font-light">Large $16.50</div>
                         </div>
-                        <img src="wwwroot/images/menu-item-6.jpg" alt="Image" class="rounded-md">
+                        <img src="images/menu-item-6.jpg" alt="Image" class="rounded-md">
                     </div>
                     <div class="flex items-start justify-end mb-6 tm-menu-item-2">
                         <div class="text-right mr-6">
@@ -137,7 +135,7 @@ https://www.tooplate.com/view/2126-antique-cafe
                             <div class="text-white text-md sm:text-lg font-light mb-1">Small $14</div>
                             <div class="text-white text-md sm:text-lg font-light">Large $18</div>
                         </div>
-                        <img src="wwwroot/images/menu-item-7.jpg" alt="Image" class="rounded-md">
+                        <img src="images/menu-item-7.jpg" alt="Image" class="rounded-md">
                     </div>
                     <div class="flex items-start justify-end mb-6 tm-menu-item-2">
                         <div class="text-right mr-6">
@@ -145,14 +143,13 @@ https://www.tooplate.com/view/2126-antique-cafe
                             <h3 class="text-lg sm:text-xl mb-2 sm:mb-3 tm-text-yellow">Iced Mocha</h3>
                             <div class="text-white text-md sm:text-lg font-light">Small $10 . Large $15</div>
                         </div>
-                        <img src="wwwroot/images/menu-item-8.jpg" alt="Image" class="rounded-md">
+                        <img src="images/menu-item-8.jpg" alt="Image" class="rounded-md">
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <div id="about" class="parallax-window" data-parallax="scroll"
-        data-image-src="wwwroot/images/antique-cafe-bg-03.jpg">
+    <div id="about" class="parallax-window" data-parallax="scroll" data-image-src="images/antique-cafe-bg-03.jpg">
         <div class="container mx-auto tm-container py-24 sm:py-48">
             <div class="tm-item-container sm:ml-auto sm:mr-12 mx-auto sm:px-0 px-4">
                 <div class="bg-white bg-opacity-80 p-12 pb-14 rounded-xl mb-5">
@@ -175,7 +172,7 @@ https://www.tooplate.com/view/2126-antique-cafe
         </div>
     </div>
     <div id="contact" class="parallax-window relative" data-parallax="scroll"
-        data-image-src="img/antique-cafe-bg-04.jpg">
+        data-image-src="images/antique-cafe-bg-04.jpg">
         <div class="container mx-auto tm-container pt-24 pb-48 sm:py-48">
             <div class="flex flex-col lg:flex-row justify-around items-center lg:items-stretch">
                 <div class="flex-1 rounded-xl px-10 py-12 m-5 bg-white bg-opacity-80 tm-item-container">
@@ -226,9 +223,9 @@ https://www.tooplate.com/view/2126-antique-cafe
         </div>
     </div>
 
-    <script src="wwwroot/js/jquery-3.6.0.min.js"></script>
-    <script src="wwwroot/js/parallax.min.js"></script>
-    <script src="wwwroot/js/jquery.singlePageNav.min.js"></script>
+    <script src="js/jquery-3.6.0.min.js"></script>
+    <script src="js/parallax.min.js"></script>
+    <script src="js/jquery.singlePageNav.min.js"></script>
     <script>
 
         function checkAndShowHideMenu() {
