--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Antique Bakery Cafe HTML Template by Tooplate</title>
+    <title>Coffe Cafe Day</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -33,11 +33,13 @@ https://www.tooplate.com/view/2126-antique-cafe
                 <button type="button" class="md:hidden py-2 px-2" id="menu-toggle"><i
                         class="fas fa-2x fa-bars tm-text-gold"></i></button>
                 <ul class="mb-3 md:mb-0 text-2xl font-normal flex justify-end flex-col md:flex-row">
-                    <li class="inline-block mb-4 mx-4"><a href="#intro" class="tm-text-gold py-1 md:py-3 px-4">Intro</a>
+                    <li class="inline-block mb-4 mx-4"><a href="#intro"
+                            class="tm-text-gold py-1 md:py-3 px-4">Overview</a>
                     </li>
                     <li class="inline-block mb-4 mx-4"><a href="#menu" class="tm-text-gold py-1 md:py-3 px-4">Menu</a>
                     </li>
-                    <li class="inline-block mb-4 mx-4"><a href="#about" class="tm-text-gold py-1 md:py-3 px-4">About</a>
+                    <li class="inline-block mb-4 mx-4"><a href="#about" class="tm-text-gold py-1 md:py-3 px-4">Our
+                            Story</a>
                     </li>
                     <li class="inline-block mb-4 mx-4"><a href="#contact"
                             class="tm-text-gold py-1 md:py-3 px-4">Contact</a></li>
@@ -47,16 +49,20 @@ https://www.tooplate.com/view/2126-antique-cafe
         <div class="container mx-auto px-2 tm-intro-width">
             <div class="sm:pb-60 sm:pt-48 py-20">
                 <div class="bg-black bg-opacity-70 p-12 mb-5 text-center">
-                    <h1 class="text-white text-5xl tm-logo-font mb-5">Antique Cafe</h1>
-                    <p class="tm-text-gold tm-text-2xl">your daily energy booster</p>
+                    <h1 class="text-white text-5xl tm-logo-font mb-5">Coffe Cafe Day</h1>
+                    <p class="tm-text-gold tm-text-2xl"><i>your daily energy booster</i></p>
                 </div>
                 <div class="bg-black bg-opacity-70 p-10 mb-5">
                     <p class="text-white leading-8 text-sm font-light">
-                        This is a coffee shop template named Antique Cafe which is a parallax HTML5 template with a good
-                        responsiveness.
-                        Feel free to use this layout for your cafe.
-                        If you have any question, please <a rel="nofollow" href="https://www.tooplate.com/contact"
-                            target="_parent">send us a message</a>. </p>
+                        <em> Welcome to <Large>Coffee Cafe Day!</Large>
+                            Our café is your digital sanctuary for all things coffee.
+                            Whether
+                            you’re looking for a morning
+                            boost or a leisurely afternoon sip, we provide an extensive selection to cater to every
+                            coffee
+                            enthusiast’s palate.
+                            Here, we don’t just serve coffee, we share stories in every cup.
+                        </em>
                 </div>
                 <div class="text-center">
                     <div class="inline-block">
@@ -83,24 +89,24 @@ https://www.tooplate.com/view/2126-antique-cafe
                         <img src="images/menu-item-1.jpg" alt="Image" class="rounded-md">
                         <div class="ml-3 sm:ml-6">
                             <h3 class="text-lg sm:text-xl mb-2 sm:mb-3 tm-text-yellow">Hot Cappuccino</h3>
-                            <div class="text-white text-md sm:text-lg font-light mb-1">S $8.50</div>
-                            <div class="text-white text-md sm:text-lg font-light">L $10.50</div>
+                            <div class="text-white text-md sm:text-lg font-light mb-1">Small $8.50</div>
+                            <div class="text-white text-md sm:text-lg font-light">Large $10.50</div>
                         </div>
                     </div>
                     <div class="flex items-start mb-6 tm-menu-item">
                         <img src="images/menu-item-2.jpg" alt="Image" class="rounded-md">
                         <div class="ml-3 sm:ml-6">
                             <h3 class="text-lg sm:text-xl mb-2 sm:mb-3 tm-text-yellow">Hot Americano</h3>
-                            <div class="text-white text-md sm:text-lg font-light mb-1">S $9.50 . BG #544639</div>
-                            <div class="text-white text-md sm:text-lg font-light">L $12.50</div>
+                            <div class="text-white text-md sm:text-lg font-light mb-1">Small $9.50</div>
+                            <div class="text-white text-md sm:text-lg font-light">Large $12.50</div>
                         </div>
                     </div>
                     <div class="flex items-start mb-6 tm-menu-item">
                         <img src="images/menu-item-3.jpg" alt="Image" class="rounded-md">
                         <div class="ml-3 sm:ml-6">
                             <h3 class="text-lg sm:text-xl mb-2 sm:mb-3 tm-text-yellow">Hot Latte #FC6</h3>
-                            <div class="text-white text-md sm:text-lg font-light mb-1">M $11.75</div>
-                            <div class="text-white text-md sm:text-lg font-light">L $14.75</div>
+                            <div class="text-white text-md sm:text-lg font-light mb-1">Small $11.75</div>
+                            <div class="text-white text-md sm:text-lg font-light">Large $14.75</div>
                         </div>
                     </div>
                     <div class="flex items-start mb-6 tm-menu-item">
@@ -108,7 +114,7 @@ https://www.tooplate.com/view/2126-antique-cafe
                         <div class="ml-3 sm:ml-6">
                             <h3 class="text-lg sm:text-xl tm-text-yellow mb-1">Hot Espresso</h3>
                             <h3 class="text-lg sm:text-xl mb-2 sm:mb-3 tm-text-yellow">Hot Chocolate</h3>
-                            <div class="text-white text-md sm:text-lg font-light">Size M $11.75 . L $14.75</div>
+                            <div class="text-white text-md sm:text-lg font-light">Size $11.75. Large $14.75</div>
                         </div>
                     </div>
                 </div>
@@ -141,7 +147,7 @@ https://www.tooplate.com/view/2126-antique-cafe
                         <div class="text-right mr-6">
                             <h3 class="text-lg sm:text-xl tm-text-yellow mb-1">Iced Espresso</h3>
                             <h3 class="text-lg sm:text-xl mb-2 sm:mb-3 tm-text-yellow">Iced Mocha</h3>
-                            <div class="text-white text-md sm:text-lg font-light">Small $10 . Large $15</div>
+                            <div class="text-white text-md sm:text-lg font-light">Small $10. Large $15</div>
                         </div>
                         <img src="images/menu-item-8.jpg" alt="Image" class="rounded-md">
                     </div>
@@ -153,15 +159,22 @@ https://www.tooplate.com/view/2126-antique-cafe
         <div class="container mx-auto tm-container py-24 sm:py-48">
             <div class="tm-item-container sm:ml-auto sm:mr-12 mx-auto sm:px-0 px-4">
                 <div class="bg-white bg-opacity-80 p-12 pb-14 rounded-xl mb-5">
-                    <h2 class="mb-6 tm-text-green text-4xl font-medium">About our cafe</h2>
+                    <h2 class="mb-6 tm-text-green text-4xl font-medium">Our Story</h2>
                     <p class="mb-6 text-base leading-8">
-                        Images are taken from Pexels, a great stock photo website. This template used Tailwind CSS. You
-                        may modify Antique Cafe template in any way you prefer and use it for your website.
+                        <em> The Journey of <bigger>Coffe Cafe Day</bigger> What began as a small dream in Kolkata has
+                            grown
+                            into a beloved
+                            online destination for
+                            coffee lovers worldwide. Founded by passionate coffee connoisseurs, we are dedicated to
+                            bringing
+                            the finest coffee
+                            experiences to your doorstep. Our beans are ethically sourced from reputable farms that
+                            practice
+                            sustainable farming. We
+                            believe in supporting local farmers and ensuring that every cup of coffee you drink is both
+                            high-quality and responsibly
+                            produced. </em>
                     </p>
-                    <p class="text-base leading-8">
-                        If you wish to <a rel="nofollow" href="https://www.tooplate.com/contact"
-                            target="_parent">support us</a>, please make a little donation via PayPal. That would be
-                        very helpful. Another way is to tell your friends about Tooplate website. Thank you. </p>
                 </div>
                 <a href="#contact"
                     class="inline-block tm-bg-green transition text-white text-xl pt-3 pb-4 px-8 rounded-md">
@@ -178,14 +191,16 @@ https://www.tooplate.com/view/2126-antique-cafe
                 <div class="flex-1 rounded-xl px-10 py-12 m-5 bg-white bg-opacity-80 tm-item-container">
                     <h2 class="text-3xl mb-6 tm-text-green">Contact Us</h2>
                     <p class="mb-6 text-lg leading-8">
-                        Praesent tellus magna, consectetur sit amet volutpat eu, pulvinar vitae sem.
-                        Sed ultrices. bg white 80% alpha. btn #066
+                        <em> Have questions, feedback, or just want to chat about coffee? Reach out to us at
+                            sauravbhattacharjee967@gmail.com or call us at
+                            +91-9123317556. We love hearing from fellow coffee enthusiasts and are always here to help.
+                        </em>
                     </p>
                     <p class="mb-10 text-lg">
                         <span class="block mb-2">Tel: <a href="tel:0100200340"
-                                class="hover:text-yellow-600 transition">010-020-0340</a></span>
+                                class="hover:text-yellow-600 transition">+91-9123317556</a></span>
                         <span class="block">Email: <a href="mailto:info@company.com"
-                                class="hover:text-yellow-600 transition">info@company.com</a></span>
+                                class="hover:text-yellow-600 transition">sauravbhattacharjee967@gmail.com</a></span>
                     </p>
                     <div class="text-center">
                         <a href="https://www.google.com/maps"
@@ -215,9 +230,13 @@ https://www.tooplate.com/view/2126-antique-cafe
             <footer class="absolute bottom-0 left-0 w-full">
                 <div
                     class="text-white container mx-auto tm-container p-8 text-lg flex flex-col md:flex-row justify-between">
-                    <span>Copyright 2022 Antique Cafe. All rights reserved.</span>
-                    <span class="mt-5 md:mt-0">Design: <a href="https://www.tooplate.com"
-                            target="_parent">Tooplate</a></span>
+                    <div class="legal-menu-brand-copyright">
+                        <small>
+                            <p>Renaissance Technologies.</p>
+                            <p>©2024 All rights reserved.</p>
+                        </small>
+                    </div>
+                    <span class="mt-5 md:mt-0">Design: <a href="https://www.tooplate.com" target="_parent"></a></span>
                 </div>
             </footer>
         </div>
